<resources>
    <string name="app_name">HikingTrail</string>
    <string name="button_addHikingtrail">Add Hiking Trial</string>
    <string name="hint_hikingtrailTitle">Hiking trail Title</string>
    <string name="hint_hikingtrailDescription">Description </string>
    <string name="hint_hikingtrailCounty">Select County </string>
    <string name="hint_hikingtrailRating">Submit your Rating below </string>
    <string name="hint_hikingtrailDifficulty">Select Difficulty of Hike  </string>
    <string name="hint_hikingtrailDate">Select Date </string>
    <string name="menu_addHikingtrail">Add</string>
    <string name="menu_mapMode">Map Mode</string>
    <string name="hiking_location">Hiking Location</string>
    <string name="hiking_date">Hiking Date</string>
    <string name="hiking_details">Hiking Details</string>
    <string name="register_hike">Register</string>
    <string name="menu_cancelHikingtrail">Cancel</string>
    <string name="menu_Back">Back</string>
    <string name="enter_hikingtrail_title"> Please enter a Hiking trail Title </string>
    <string name="save_hikingtrail"> Save Hiking Trail </string>
    <string name="button_addImage"> Add Image </string>
    <string name="add_map_location"> Add Map Location </string>
    <string name="select_hikingtrail_image">Select hiking trail image</string>
    <string name="change_hikingtrail_image">Change hiking image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="menu_deleteHikingtrail">Delete</string>
    <string name="menu_saveHikingtrail">Save</string>
    <string name="title_activity_hikingtrail_maps">Map of All Hikingtrails </string>
    <string name="hikingtrail_image_placeholder">Hikingtrail Image</string>
    <string name="hikingtrail_title_placeholder">Hikingtrail Title</string>
    <string name="hikingtrail_rating_placeholder">Hikingtrail Rating</string>
    <string name="hikingtrail_description_placeholder">Hikingtrail Description</string>
    <string name="hikingtrail_county_placeholder">Hikingtrail County</string>
    <string name="hikingtrail_difficulty_placeholder">Hikingtrail Difficulty</string>
    <string name="selected_item">Selected item:</string>
    <string name="aboutus_message">Welcome to Hiking App .. please add some hiking trails!!!</string>
    <string name="action_about">About Us</string>
    <string name="easy">Easy</string>
    <string name="moderate">Moderate</string>
    <string name="diffculty">Difficult</string>

    <string name="nav_header_title">Hiking Trails</string>
    <string name="nav_header_subtitle">make a review</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_home">Home</string>
    <string name="action_report">Hiking</string>
    <string name="group_communicate">Communicate</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>

    <string name="title_activity_login"> Signup/Login to Hiking Trails App</string>
    <string name="menu_showMap">Show Map</string>
    <string name="menu_logout">Logout</string>
    <string name="choose_theme_text">choose_theme </string>
    <string name="menu_theme">choose_theme </string>
    <string name="title_about">Welcome</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>



    <string-array name="Difficulty">
        <item>Easy</item>
        <item>Moderate</item>
        <item>Difficult</item>
    </string-array>

    <string-array name="County">
        <item>Carlow</item>
        <item>Cavan</item>
        <item>Clare</item>
        <item>Cork,</item>
        <item>Donegal</item>
        <item>Dublin</item>
        <item>Galway</item>
        <item>Kerry</item>
        <item>Kildare</item>
        <item>Kilkenny</item>
        <item>Laois</item>
        <item>Leitrim</item>
        <item>Limerick</item>
        <item>Longford,</item>
        <item>Louth,</item>
        <item>Mayo</item>
        <item>Meath</item>
        <item>Monaghan</item>
        <item>Offaly</item>
        <item>Roscommon</item>
        <item>Sligo</item>
        <item>Tipperary</item>
        <item>Waterford</item>
        <item>Westmeath</item>
        <item>Wexford</item>
        <item>Wicklow</item>
        <item>Antrim</item>
        <item>Down</item>
        <item>Tyrone</item>
        <item>Armagh</item>
        <item>Derry</item>

    </string-array>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>